--- a/Justificacion/justificacion.tex
+++ b/Justificacion/justificacion.tex
@@ -1,7 +1,8 @@
 Actualmente, el desarrollo de páginas web es una de las oportunidades de empleo con mayor demanda dentro del área de la informática, en los principales buscadores de empleo se pueden encontrar gran cavidad para ejercer dentro esta rama. El desarrollo Front-end, de páginas web, es una de las subáreas más buscadas por las empresas que implementan servicios basados en web, o que de alguna manera consumen algún producto. 
 El famoso sitio Stackoverflow realiza una serie de estadísticas anuales en las cuales da a conocer los lenguajes de programación en los cuales ellos obtienen un mayor número de búsquedas y respuestas. Las estadísticas muestran que, durante el transcurso del actual año (2020), el lenguaje más usado por la comunidad de desarrolladores profesionales es JAVASCRIPT. 
 Por otra parte, dentro esta serie de estadísticas se cuenta con un apartado para los Frameworks, en el cual encontramos que en segundo puesto está REACT, solo por debajo de JQUERY el cual puede ser embebido dentro de REACT.  Finalmente se encontró que la librería número uno es Node.js. 
-El desarrollo Front-end de páginas web consiste en hacer la visualización que tenemos cuando ingresamos a algún sitio desde nuestro navegador, para esto es necesario que el programador que realiza la tarea tenga conocimientos básicos de HTML, CSS y JAVASCRIPT, para que sea posible construir una web sencilla. Cabe destacar que un desarrollador Front-end no es el encargado de diseñar la experiencia de usuario ni tampoco el diseño de interfaz gráfica, ya que para esto existen otras disciplinas especializadas, pero en caso de tener conocimiento en el área puede agregar una herramienta que puede combinarse y agregar habilidades.  
+El desarrollo Front-end de páginas web consiste en hacer la visualización que tenemos cuando ingresamos a algún sitio desde nuestro navegador, para esto es necesario que el programador que realiza la tarea tenga conocimientos básicos de HTML, CSS y JAVASCRIPT, para que sea posible construir una web sencilla. Cabe destacar que un desarrollador Front-end no es el encargado de diseñar la experiencia de usuario ni tampoco el diseño de interfaz gráfica, ya que para esto existen otras disciplinas especializadas, pero en caso de tener conocimiento en el área puede agregar una herramienta que puede combinarse y agregar habilidades.
+\newline
 En la medida que una web escala, esta tiende a aumentar su complejidad de desarrollo si no se comienzan a usar librerías o frameworks, que nos permiten a tener un trabajo más limpio, organizado, seguro y modulable. 
 Como se mencionó anteriormente JAVASCRIPT es usado tanto de manera profesional como con otros fines como los académicos, este lenguaje cuenta con un gestor de paquetes denominado NPM, que permite que se agreguen miles de funcionalidades extras a tu proyecto, NPM consiste en un cliente de líneas de comandos con el cual es posible agregar a nuestro proyecto paquetes, estos paquetes son de utilidad porque podemos reusar código que alguien más ya desarrollo, probó y decidió compartirlo, haciendo que el trabajo sea más ágil.  De igual manera nosotros podemos aportar publicando nuestra librería. Dentro de NPM contamos con miles de librerías de código abierto.  
 Teniendo esto en cuenta, nos da la posibilidad de tener nuestra propia librería y publicarla, para que personas a las cuales tienen alguna necesidad, pero no cuentan con el tiempo de ejecutarla puedan acceder a la nuestra, e incluso nosotros mismos usarlas en posteriores proyectos. 
@@ -10,6 +11,7 @@ El desarrollo de software de código abierto consiste en publicar algún tipo de
 Anteriormente se mencionó un Framework de Front-end llamado REACT, este es mantenido por Facebook desde mayo del 2013 que fue su fecha de publicación, en la actualidad tiene más de mil contribuidores según lo indica el repositorio oficial. 
 Algunas de las particularidades de REACT es que nos motiva a crear componentes que pueden ser utilizados más veces, y de esta manera tener una menor cantidad de código y más reutilizable. 
 Nos deja crear una aplicación en una sola página que de ser de una manera tradicional y a gran escala se convertirían en una tarea imposible.
+\newline
 Por el uso desmedido de cada una de las tecnologías que se han mencionado nace la razón por la cual se desea desarrollar una librería de NPM, la cual ayudará grandemente a la comunidad de desarrolladores de páginas web y esto principalmente a las personas que cubren el rol de programadores Front-end. 
 Esta librería permitiría a los desarrolladores agilizar su carga de trabajo, poniendo a su alcance un conjunto de elementos usados en el desarrollo Front-end, alguno de ellos son botones, textos, etiquetas de texto, tablas, checkbox, radio botones, etc.  Los cuáles serán elementos definidos, que contarán con una definición de estilos (SCSS) establecidos, cada componente permitirá al desarrollador modificar parámetros básicos como el color, el texto y acción que va a realizar, esto con el fin de adaptarlo a las necesidades propias del proyecto en el que se va a hacer la implementación de la librería.  
 Otra ventaja por parte de la librería es que esta estará basada en prácticas modernas del diseño UI/UX, como lo es Mobile First Indexing (ideología de Google), que nos pide enfocar el diseño de cualquier web primero para dispositivos móviles, ya que afirman que es en el mercado el cual consume más contenido web, ayudándonos a no requerir un conocimiento avanzado sobre el diseño de interfaces gráficas. 
