--- a/MarcoTeorico/marcoTeorico.tex
+++ b/MarcoTeorico/marcoTeorico.tex
@@ -23,14 +23,16 @@ La configuración es dada por un archivo que se coloca en la raíz del proyecto.
 
    \item \textbf{BABEL  :}   BABEL es un traductor de código JAVASCRIPT, que permite convertir el código JAVASCRIPT más moderno en alguna versión más vieja, esto nos proporcionó la capacidad de que nuestro código pueda ser ejecutado por más cantidad de navegadores, los cuales solo pueden interpretar versiones anteriores de JAVASCRIPT. Por ejemplo, el siguiente código es usado en REACT para mostrar un texto. 
    \newline
+   \newline
    \includegraphics[width=1\textwidth]{./Imagenes/image16.png}
+   \newline
    \newline
    El código será convertido en el que se muestra a continuación, el cual es interpretada por un mayor número de navegadores. 
    \newline
    \newline
    \includegraphics[width=1\textwidth]{./Imagenes/image5.png}
    \newline
-   
+   \newline
    \item \textbf{ESLINT :}ESLINT nos permite definir una guía de estilos en nuestro código, lo que nos ayudará a tener un código limpio y claro para que sea fácil de editar y mantener, podemos agregar guías de estilos una de ellas es la de AIRBNB, que es una de las más usadas. 
    
 \end{itemize}
