--- a/Procedimiento/procedimiento.tex
+++ b/Procedimiento/procedimiento.tex
@@ -1,6 +1,8 @@
 El objetivo de desarrollo de la presente librería se basa en el siguiente principio, “ cuando un elemento sea actualizado, sea un botón, cuadro de estado, entrada de texto, etc. el componente regresará un objeto el cual tendrá el nombre del elemento y el nuevo valor para que este sea actualizado en el state de react ”.  Con esto deseamos generar el siguiente flujo.
 \newline
+\newline
 \includegraphics[width=1\textwidth]{./Imagenes/carbon-8.png}
+\newline
 \newline
 Importamos el elemento CheckBox desde “crown” dentro de el método render en return  ponemos el componente CheckBox y le damos los  siguientes  props.
 
@@ -12,11 +14,11 @@ Importamos el elemento CheckBox desde “crown” dentro de el método render en
 
 \newline
 Dentro del componente CheckBox se devuelve un objeto como el que se muestra enseguida.
-
+\newline
 \newline
 \includegraphics[width=1\textwidth]{./Imagenes/carbon-6.png}
 \newline
-
+\newline
 
 \begin{itemize}
 	\item \textbf{onChange:}  Este es el evento que se ejecuta cuando una acción es disparada, por ejemplo cuando haces click en un CheckBox.
