--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -42,6 +42,7 @@
 				\input{./Objetivos/objetivosEspecificos.tex}
 			
 		\chapter {ALCANCES Y LIMITACIONES }
+				\input{./AlcancesLimitaciones/alcanceslimitaciones.tex}
 		
 		\chapter {MARCO TEÓRICO  }
 			\input{./MarcoTeorico/marcoTeorico.tex}
