--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -65,7 +65,8 @@
 		\chapter {CONCLUSIONES Y RECOMENDACIONES}
 		
 		\chapter {FUENTES DE INFORMACIÓN}
-		
+			\input{./Bibliografia/bibliografia}
+			
 		\chapter {ANEXOS}
 
 \end{document}
