--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -8,8 +8,11 @@
 
 \usepackage{graphicx}
 
+\usepackage{geometry}
+\newgeometry{ bottom=2.5cm, top=2.5cm, left=3cm, right=2.5cm}
+
 \usepackage{titlesec}
- 
+
 \titleformat{\chapter}[display]
   {\normalfont\bfseries}{}{0pt}{\Huge}
   
@@ -23,10 +26,9 @@
 }
 \title{DESARROLLO DE UNA LIBRERÍA NPM DE FRONT-END BASADA EN COMPONENTES DE REACT PARA EL ÁGIL MAQUETADO DE UNA PÁGINA WEB USANDO BUENAS PRÁCTICAS DE DISEÑO UX/UI}
 
-
 \begin{document}
 	\maketitle
-
+	
 	\tableofcontents
 	
 		\chapter {INTRODUCCIÓN}
@@ -40,6 +42,10 @@
 			
 			\section {OBJETIVOS ESPECÍFICOS} 
 				\input{./Objetivos/objetivosEspecificos.tex}
+		
+		\chapter {CARACTERIZACIÓN DEL ÁREA EN QUE SE PARTICIPÓ }
+		
+		\chapter {PROBLEMAS A RESOLVER CON SU RESPECTIVA PRIORIZACIÓN }
 			
 		\chapter {ALCANCES Y LIMITACIONES }
 				\input{./AlcancesLimitaciones/alcanceslimitaciones.tex}
