--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -44,8 +44,10 @@
 				\input{./Objetivos/objetivosEspecificos.tex}
 		
 		\chapter {CARACTERIZACIÓN DEL ÁREA EN QUE SE PARTICIPÓ }
+			\input{./CaracterizacionAreas/CaracterizacionAreas.tex}
 		
 		\chapter {PROBLEMAS A RESOLVER CON SU RESPECTIVA PRIORIZACIÓN }
+			\input{./Problemas/Problemas.tex}
 			
 		\chapter {ALCANCES Y LIMITACIONES }
 				\input{./AlcancesLimitaciones/alcanceslimitaciones.tex}
