--- a/AlcancesLimitaciones/alcanceslimitaciones.tex
+++ b/AlcancesLimitaciones/alcanceslimitaciones.tex
@@ -1,6 +1,6 @@
 \section{ALCANCES}
 
-Para el desarrollo del presente proyecto se contempla la implementación de un conjunto de elementos, que podrán ser integrados en cualquier proyecto en el que se use JAVASCRIPT y el gestor de paquetes NPM. Debe considerarse que al momento de instalar la presente librería instalará forzosamente REACT.
+Para el desarrollo del presente proyecto se contempla la implementación de un conjunto de elementos, que podrán ser integrados en cualquier proyecto en el que se use JavaScript y el gestor de paquetes NPM. Debe considerarse que al momento de instalar la presente librería instalará forzosamente React.
  \newline
 Se enlistan los primeros elementos que son considerados en el desarrollo. Los cuales son los elementos básicos y que al combinarlos es posible generar interacciones mayores.
  \newline
@@ -34,7 +34,7 @@ También se incluyen otros elementos que no son considerados como básicos pero 
 \item Registro de datos
 \end{itemize}
 \newline
-El conjunto de elementos a desarrollar se tendrán debidamente funcionales y supervisados bajo un marco de pruebas de JAVASCRIPT, para esto se estará usando el framework JEST.JS así garantizando la funcionalidad esperada para los usuarios que desean usar la librería, evitando los problemas que pudieran encontrar en los proyectos que lo implementaran. 
+El conjunto de elementos a desarrollar se tendrán debidamente funcionales y supervisados bajo un marco de pruebas de JavaScript, para esto se estará usando el framework Jest así garantizando la funcionalidad esperada para los usuarios que desean usar la librería, evitando los problemas que pudieran encontrar en los proyectos que lo implementaran. 
 Cada elemento estará debidamente estilizado bajo consideración propia y los conocimientos adquiridos sobre la presente acerca de la experiencia de usuario y el diseño de interfaces.
 
 \section{LIMITACIONES}
