--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -1,10 +1,14 @@
 \documentclass[a4paper,12pt]{report}
 
+\usepackage[T1]{fontenc}
+
 \usepackage[spanish]{babel}
 
 \usepackage[utf8]{inputenc}
 
 \usepackage{setspace}
+
+\usepackage{float}
 
 \usepackage{graphicx}
 
@@ -13,8 +17,6 @@
 
 \usepackage{titlesec}
 
-\titleformat{\chapter}[display]
-  {\normalfont\bfseries}{}{0pt}{\Huge}
   
 \pagestyle{plain}
 
@@ -30,51 +32,54 @@
 	\maketitle
 	
 	\tableofcontents
-	
-		\chapter {INTRODUCCIÓN}
+		
+		\addcontentsline{toc}{chapter}{\listfigurename}
+		\listoffigures
+		
+		\chapter {Introducción}
 			
-		\chapter {JUSTIFICACIÓN }
+		\chapter {Justificación }
 			\input{./Justificacion/justificacion.tex}
 		
-		\chapter {OBJETIVOS }
-			\section {OBJETIVOS GENERALES}
+		\chapter {Objetivos }
+			\section {Objetivos Generales}
 				\input{./Objetivos/objetivosGenerales.tex}
 			
-			\section {OBJETIVOS ESPECÍFICOS} 
+			\section {Objetivos Específicos} 
 				\input{./Objetivos/objetivosEspecificos.tex}
 		
-		\chapter {CARACTERIZACIÓN DEL ÁREA EN QUE SE PARTICIPÓ }
+		\chapter {Caracterización Del Área En La Que Se Participó  }
 			\input{./CaracterizacionAreas/CaracterizacionAreas.tex}
 		
-		\chapter {PROBLEMAS A RESOLVER CON SU RESPECTIVA PRIORIZACIÓN }
+		\chapter {Problemas A Rerolver Ccon Su Respectiva Priorización }
 			\input{./Problemas/Problemas.tex}
 			
-		\chapter {ALCANCES Y LIMITACIONES }
+		\chapter {Aalcances Y Limitaciones }
 				\input{./AlcancesLimitaciones/alcanceslimitaciones.tex}
 		
-		\chapter {MARCO TEÓRICO  }
+		\chapter {Marco Teórico  }
 			\input{./MarcoTeorico/marcoTeorico.tex}
 		
-		\chapter {PROCEDIMIENTO Y DESCRIPCIÓN DE LAS ACTIVIDADES REALIZADAS}
+		\chapter {Procedimiento Y Descripción De Las Actividades Realizadas}
 			\input{./Procedimiento/procedimiento.tex}
 			
-			\section {CREACIÓN DEL AMBIENTE DE DESARROLLO}
+			\section {Creación Del Aambiente De Desarrolo}
 				\input{./Procedimiento/ambiente.tex}
 				
-			\section {DESARROLLO}
+			\section {Desarrollo}
 				\input{./Procedimiento/desarrollo.tex}
 				
-			\section {TEST }
+			\section {Test }
 				\input{./Procedimiento/test.tex}
 			
 		
-		\chapter {RESULTADOS}
+		\chapter {Pruebas y Resultados}
 		
-		\chapter {CONCLUSIONES Y RECOMENDACIONES}
+		\chapter {Conclusiones Y Recomendaciones}
 		
-		\chapter {FUENTES DE INFORMACIÓN}
+		\chapter {Fuentes de Información}
 			\input{./Bibliografia/bibliografia}
 			
-		\chapter {ANEXOS}
+		\chapter {Anexos}
 
 \end{document}
