--- a/MarcoTeorico/marcoTeorico.tex
+++ b/MarcoTeorico/marcoTeorico.tex
@@ -1,38 +1,40 @@
-\begin{itemize}
-
-	\item \textbf{Librería Front-end:} Una librería Front-end es una herramienta que es agregada a nuestros proyectos, en este caso web, el cual incorpora elementos que otras personas o equipos ya desarrollaron, sumando funcionalidad a nuestra web, reduce el mantenimiento y el tiempo de desarrollo, algunas características que existen actualmente y pueden agregarse van desde gráficas, animaciones, mapas etc. 
-  
-   \item \textbf{NPM :} NPM es un gestor de paquetes que nos permite agregar dependencias a cualquier proyecto basado en JAVASCRIPT, esto es posible con un cliente de líneas de comandos que es útil para poner o quitar los paquetes que deseamos. La configuración consta de un archivo en el cual contiene una lista de las dependencias que se quieren instalar en nuestro proyecto. Actualmente existen miles de paquetes que pueden ser descargados de manera gratuita y de igual manera permite colaborar. 
-   
-   \item \textbf{ REACT :} REACT es una librería de JAVASCRIPT para el desarrollo de interfaces de usuario (Front-end), famosa por la posibilidad de hacer fácilmente webs de usa sola página. REACT fue desarrollada por Facebook y con el paso del tiempo, conocidas empresas han empezado a implementarlo en sus proyectos. 
-REACT nos permite desarrollar de una forma más ordenada y con el menos código necesario. 
-Se considera que REACT no es un Framework en comparación con ANGULAR o EMBER porque no tiene cada una de las áreas que propone el modelo vista controlador, este solo se encarga de las vistas. 
-Uno de los puntos fuertes de REACT es que cuenta con un DOM virtual el cual es almacenado en memoria, esto provoca que cuando algo cambie este se va reflejado en memoria de una forma más rápida, después el DOM virtual será comparado con el DOM del navegador y solo actualizara lo que encuentre diferente. 
-REACT funciona en base a componentes que pueden ser reusados cuantas veces sea necesario, una forma fácil de entenderlo puede ser como la programación orientada a objetos al hacer una instancia de una clase, estos componentes pueden tener un estado, que es encapsulado por sí solo, de manera local por cada uno y puede ser actualizado.  
-
-   \item \textbf{HTML  :}   HTML es un lenguaje con un conjunto de etiquetas que permite definir el contenido con el que podemos interactuar dentro de una página web. 
-   
-   \item \textbf{ SASS :} SASS es un preprocesador de CSS, el cual nos ayuda a agregar características que no tiene CSS puro y que son propias de los lenguajes de programación como variables, funciones, herencia entre otros. Nos permite dedicar menos tiempo para mantener y crear el CSS y agrega la posibilidad de tener una organización modular. 
-   
-   \item \textbf{ WEBPACK :} Hace algunos años JAVASCRIPT iniciaba como un lenguaje que nos permitía agregar interacción a nuestras páginas web, que anteriormente eran simplemente contenido estático.  JAVASCRIPT nos permitía recuperar los datos que eran introducidos en formularios, podíamos mostrar ventanas emergentes o incluso agregar animaciones. Para agregar JAVASCIPT en nuestros archivos de HTML, se debía agregar la etiqueta <script>, donde se indicaba la ruta donde estaba almacenado nuestro archivo .js de JAVASCRIPT.  
-Años más tarde se agregó soporte al lenguaje JAVASCRIPT, para permitir hacer peticiones asíncronas a nuestros servidores, esto hizo que las empresas empezaran a ver como viable el desarrollo web, que previamente estaba enfocado en el desarrollo de escritorio, también hizo que los archivos .js empezaran a crecer en cantidad de líneas en nuestros proyectos, y se miraba reflejado en nuestros archivos .html los cuales empezaron a tener múltiples etiquetas <script>. Lo que significaba múltiples peticiones para obtener los archivos del servidor, esto agregaba una capa de complejidad, debido a la inclusión de múltiples archivos .js embebidos en un .html y al agregarlos se debe tener en cuenta el orden en que se listan, porque es posible que tengan dependencias entre ellos. Actualmente es posible comprimir los múltiples archivos .js para que sean menos peticiones al servidor (CDN).  Cuando un proyecto con JAVASCRIPT crecía aumentaba el número de módulos que se agregan, pero no existía la forma de gestionarlos. Un problema que tenía JAVASCRIPT es que los navegadores no soportan un sistema nativo de módulos por eso se agregaron Require.js y Common JS. 
-En base a esto nació WEBPACK que permite usar NPM como gestor de dependencias y soporta el sistema de módulos Common JS.
-WEBPACK permite modular nuestro código, para esto genera un grafo dado un punto de entrada, el punto de entrada es el nodo inicial de nuestro grafo, el grafo es generado con las inclusiones de elementos encontrados en los archivos, como son imágenes, archivos de CSS etc. Esto genera un archivo final en el que estará el empaquetado de nuestros archivos. 
-WEBPACK nos permite especificar cargadores para distintos tipos de archivos como imágenes, SCSS, CSS, HTML. JSX, etc. ya que nativamente solo admite archivos JAVASCRIPT. 
-La configuración es dada por un archivo que se coloca en la raíz del proyecto.
-
-   \item \textbf{BABEL  :}   BABEL es un traductor de código JAVASCRIPT, que permite convertir el código JAVASCRIPT más moderno en alguna versión más vieja, esto nos proporcionó la capacidad de que nuestro código pueda ser ejecutado por más cantidad de navegadores, los cuales solo pueden interpretar versiones anteriores de JAVASCRIPT. Por ejemplo, el siguiente código es usado en REACT para mostrar un texto. 
-   \newline
-   \newline
-   \includegraphics[width=1\textwidth]{./Imagenes/image16.png}
-   \newline
-   \newline
-   El código será convertido en el que se muestra a continuación, el cual es interpretada por un mayor número de navegadores. 
-   \newline
-   \newline
-   \includegraphics[width=1\textwidth]{./Imagenes/image5.png}
-   \newline
-   \newline
-   \item \textbf{ESLINT :}ESLINT nos permite definir una guía de estilos en nuestro código, lo que nos ayudará a tener un código limpio y claro para que sea fácil de editar y mantener, podemos agregar guías de estilos una de ellas es la de AIRBNB, que es una de las más usadas. 
-   
-\end{itemize}
+    \begin{itemize}
+    
+    	\item \textbf{Librería Front-end:} Una librería Front-end es una herramienta que es agregada a nuestros proyectos, en este caso web, el cual incorpora elementos que otras personas o equipos ya desarrollaron, sumando funcionalidad a nuestra web, reduce el mantenimiento y el tiempo de desarrollo, algunas características que existen actualmente y pueden agregarse van desde gráficas, animaciones, mapas etc. 
+      
+       \item \textbf{NPM :} NPM es un gestor de paquetes que nos permite agregar dependencias a cualquier proyecto basado en Javascript, esto es posible con un cliente de líneas de comandos que es útil para poner o quitar los paquetes que deseamos. La configuración consta de un archivo en el cual contiene una lista de las dependencias que se quieren instalar en nuestro proyecto. Actualmente existen miles de paquetes que pueden ser descargados de manera gratuita y de igual manera permite colaborar. 
+       
+       \item \textbf{ React :} React es una librería de Javascript para el desarrollo de interfaces de usuario (Front-end), famosa por la posibilidad de hacer fácilmente webs de usa sola página. React fue desarrollada por Facebook y con el paso del tiempo, conocidas empresas han empezado a implementarlo en sus proyectos. 
+    React nos permite desarrollar de una forma más ordenada y con el menos código necesario. 
+    Se considera que React no es un Framework en comparación con ANGULAR o EMBER porque no tiene cada una de las áreas que propone el modelo vista controlador, este solo se encarga de las vistas. 
+    Uno de los puntos fuertes de React es que cuenta con un DOM virtual el cual es almacenado en memoria, esto provoca que cuando algo cambie este se va reflejado en memoria de una forma más rápida, después el DOM virtual será comparado con el DOM del navegador y solo actualizara lo que encuentre diferente. 
+    React funciona en base a componentes que pueden ser reusados cuantas veces sea necesario, una forma fácil de entenderlo puede ser como la programación orientada a objetos al hacer una instancia de una clase, estos componentes pueden tener un estado, que es encapsulado por sí solo, de manera local por cada uno y puede ser actualizado.  
+    
+       \item \textbf{HTML  :}   HTML es un lenguaje con un conjunto de etiquetas que permite definir el contenido con el que podemos interactuar dentro de una página web. 
+       
+       \item \textbf{ SASS :} SASS es un preprocesador de CSS, el cual nos ayuda a agregar características que no tiene CSS puro y que son propias de los lenguajes de programación como variables, funciones, herencia entre otros. Nos permite dedicar menos tiempo para mantener y crear el CSS y agrega la posibilidad de tener una organización modular. 
+       
+       \item \textbf{ Webpack :} Hace algunos años Javascript iniciaba como un lenguaje que nos permitía agregar interacción a nuestras páginas web, que anteriormente eran simplemente contenido estático.  Javascript nos permitía recuperar los datos que eran introducidos en formularios, podíamos mostrar ventanas emergentes o incluso agregar animaciones. Para agregar Javascript en nuestros archivos de HTML, se debía agregar la etiqueta <script>, donde se indicaba la ruta donde estaba almacenado nuestro archivo .js de Javascript.  
+    Años más tarde se agregó soporte al lenguaje Javascript, para permitir hacer peticiones asíncronas a nuestros servidores, esto hizo que las empresas empezaran a ver como viable el desarrollo web, que previamente estaba enfocado en el desarrollo de escritorio, también hizo que los archivos .js empezaran a crecer en cantidad de líneas en nuestros proyectos, y se miraba reflejado en nuestros archivos .html los cuales empezaron a tener múltiples etiquetas <script>. Lo que significaba múltiples peticiones para obtener los archivos del servidor, esto agregaba una capa de complejidad, debido a la inclusión de múltiples archivos .js embebidos en un .html y al agregarlos se debe tener en cuenta el orden en que se listan, porque es posible que tengan dependencias entre ellos. Actualmente es posible comprimir los múltiples archivos .js para que sean menos peticiones al servidor (CDN).  Cuando un proyecto con Javascript crecía aumentaba el número de módulos que se agregan, pero no existía la forma de gestionarlos. Un problema que tenía Javascript es que los navegadores no soportan un sistema nativo de módulos por eso se agregaron Require.js y Common JS. 
+    En base a esto nació Webpack que permite usar NPM como gestor de dependencias y soporta el sistema de módulos Common JS.
+    Webpack permite modular nuestro código, para esto genera un grafo dado un punto de entrada, el punto de entrada es el nodo inicial de nuestro grafo, el grafo es generado con las inclusiones de elementos encontrados en los archivos, como son imágenes, archivos de CSS etc. Esto genera un archivo final en el que estará el empaquetado de nuestros archivos. 
+    Webpack nos permite especificar cargadores para distintos tipos de archivos como imágenes, SCSS, CSS, HTML. JSX, etc. ya que nativamente solo admite archivos Javascript. 
+    La configuración es dada por un archivo que se coloca en la raíz del proyecto.
+    
+       \item \textbf{Babel  :}   Babel es un traductor de código Javascript, que permite convertir el código Javascript más moderno en alguna versión más vieja, esto nos proporcionó la capacidad de que nuestro código pueda ser ejecutado por más cantidad de navegadores, los cuales solo pueden interpretar versiones anteriores de Javascript. Por ejemplo, el siguiente código es usado en React para mostrar un texto. 
+    \begin{figure}[H]
+    \includegraphics[width=1\textwidth]{./Imagenes/image16.png}
+    \caption[Impresión de texto con React]{Impresión de texto con React}
+    \end{figure}
+       El código será convertido en el que se muestra En la figura 7.2, el cual es interpretada por un mayor número de navegadores. 
+       \newline
+       \newline
+       \begin{figure}[H]
+       \includegraphics[width=1\textwidth]{./Imagenes/image5.png}
+        \caption[Impresión de texto una vez el código es convertido]{Impresión de texto una vez el código es convertido}
+       \end{figure}
+       \newline
+       \newline
+       \item \textbf{ESLint :}ESLint nos permite definir una guía de estilos en nuestro código, lo que nos ayudará a tener un código limpio y claro para que sea fácil de editar y mantener, podemos agregar guías de estilos una de ellas es la de Airbnb, que es una de las más usadas. 
+       
+    \end{itemize}
